--- a/bot/config.py.example
+++ b/bot/config.py.example
@@ -7,4 +7,7 @@ ses = dict( # Amazon Simple Email Service (ses)
   smtp_from = 'karl.rink@nationsinfocorp.com',
 )
 
+blacklistsoftware = [ 'Slack', 'Skype'
+]
+
 
