--- a/sys/server/config.py.example
+++ b/sys/server/config.py.example
@@ -1,5 +1,7 @@
 
-ses = dict( # Amazon Simple Email Service (ses)
+param = dict(
+  url = 'http://127.0.0.1:5000',
+  # Amazon Simple Email Service (ses)
   smtp_host = 'email-smtp.us-west-2.amazonaws.com',
   smtp_port = '587',
   smtp_user = 'XXXXXXXXXXXXXXXXXXXX',
@@ -7,5 +9,4 @@ ses = dict( # Amazon Simple Email Service (ses)
   smtp_from = 'karl.rink@nationsinfocorp.com',
   smtp_to   = 'karl.rink@nationsinfocorp.com'
 )
-
 
