--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 
 [metadata]
 name = jumpcloud-pkg-krink
-version = 1.1.1
+version = 1.1.1-0
 author = Karl Rink
 author_email = karl@rink.us
 description = jumpcloud command for jumpcloud.com
