--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 
 [metadata]
 name = jumpcloud-pkg-krink
-version = 1.1.2
+version = 2.0.0-0-DEV0
 author = Karl Rink
 author_email = karl@rink.us
 description = jumpcloud command for jumpcloud.com
@@ -23,5 +23,4 @@ python_requires = >=3.6
 
 [options.packages.find]
 where = src
-
 
