--- a/setup.cfg
+++ b/setup.cfg
@@ -11,9 +11,13 @@ url = https://gitlab.com/krink/jumpcloud
 project_urls =
     Bug Tracker = https://gitlab.com/krink/jumpcloud/issues
 classifiers =
-    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
+    Development Status :: 5 - Production/Stable
+    Environment :: Console
+    Intended Audience :: System Administrators
+    Topic :: Utilities
 
 [options]
 package_dir =
