--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 
 [metadata]
 name = jumpcloud-pkg-krink
-version = 2.0.0-0-DEV0
+version = 2.0-🎄
 author = Karl Rink
 author_email = karl@rink.us
 description = jumpcloud command for jumpcloud.com
